# algorithms_part1-06-enchlist-stud

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  bidi_linked_list.h  bidi_linked_list.hpp  main.cpp
tests/: CMakeLists.txt  bidi_linked_list_test.cpp
